fixed buttons and nav alignment

--- a/css/style.css
+++ b/css/style.css
@@ -25,10 +25,43 @@ body {
 }
 
 .container nav {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    background-color: #898989;
+}
 
+.container nav a {
+    color: gold;
+    font-size: 1.5rem;
+    text-decoration: none;
+}
+
+.container nav a:hover {
+    text-decoration: underline;
+    color: black;
+}
+
+.container nav a:active {
+    text-decoration: underline;
+    text-transform: uppercase;
 }
 
 .content section {
-
+    margin: 50px 10px 50px 50px;
+    min-height: 5rem;
+    background-color: #474747;
     display: flex;
+    flex-direction: column;
+    justify-content: center;
+    max-width: 20%;
+}
+
+.content section button {
+    background-color: gold;
+    border-color: black;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    max-height: 10rem;
 }
